Further test fix for Availability grid display bug on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1789,7 +1789,7 @@ Contact Form Modal
 
 .form .fixed-height {
   height: 48vh;
-  max-height: 22rem;
+  max-height: 23rem;
 }
 
 .form .fixed-height+div {
